Optimized searchProduct. Added pagination and showing in cart quantity according to user